scrollbar fix

--- a/components/listing/EmployeeList.module.scss
+++ b/components/listing/EmployeeList.module.scss
@@ -29,37 +29,34 @@
 }
 
 .listing_body {
+  overflow: auto; // Content remains scrollable
+  -ms-overflow-style: none; // Hides scrollbar in IE and Edge
+  scrollbar-width: none; // Hides scrollbar in Firefox
+
+  &::-webkit-scrollbar {
+    display: none; // Hides scrollbar in Webkit browsers
+  }
+
   height: 80%;
-  overflow-y: auto; /* Enable vertical scrolling */
-  scrollbar-width: thin; /* For Firefox */
-  scrollbar-color: $primary_color $secondary_color;
-  // border-left : 1px solid white;
+  // overflow-y: auto;
+  // scrollbar-width: thin;
+  // scrollbar-color: $primary_color $secondary_color;
   .row {
     display: grid;
     grid-template-columns: 50px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 64px;
     align-items: center;
-
     border-radius: 8px;
-    // padding: 0px 12px;
-
-    // padding: 12px 4px;
-    // border-radius: 8px;
 
     span {
-      // border-radius: 16px;
       background-color: #3e3a3e;
       display: flex;
       text-align: center;
       justify-content: center;
-
       height: 40px;
       align-items: center;
       color: white;
-      // padding: 8px;
       font-size: 0.75rem;
-      // margin-bottom: 12px;
       width: 100%;
-
       border-bottom: 1px solid white;
     }
     span:first-child {
